registrationId 추가 수정
